--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,5 +7,5 @@
     color: aliceblue;
 }
 .well {
-    background-color: rgba(0, 71, 171, 0.70) !important;
+    background-color: #1f77b4 !important;
 }
